# BreakInAndOut

./: CMakeLists.txt
BreakInAndOut/: CMakeLists.txt  main.cpp
BreakInAndOut/include/: Entities.hpp  Entity.hpp  Scene.hpp  Systems.hpp  UI.hpp
BreakInAndOut/include/Component/: BlockState.hpp  CollisionBox.hpp  Displacement.hpp  PaddleState.hpp  Position.hpp  Shapes.hpp  Velocity.hpp  Watcher.hpp
BreakInAndOut/include/Component/ui/: Container.hpp  MouseHitBox.hpp  Text.hpp
BreakInAndOut/include/utils/: Editor.hpp  Level.hpp  Map.hpp  Sounds.hpp  bezier.hpp  collisionDetection.hpp  masking.hpp  math.hpp
BreakInAndOut/levels/story/: 1.lvl  2.lvl  3.lvl  4.lvl  5.lvl  6.lvl  7.lvl  8.lvl  menu.lvl
BreakInAndOut/src/: Scene.cpp  main.cpp
BreakInAndOut/src/Entity/: Ball.cpp  Block.cpp  Paddle.cpp
BreakInAndOut/src/Entity/ui/: Button.cpp  Panel.cpp  Text.cpp  TextButton.cpp
BreakInAndOut/src/System/: Draw.cpp  checkWin.cpp  collision.cpp  damagePaddle.cpp  edit.cpp  handleMouseClick.cpp  intergrate.cpp  lunchBall.cpp  music.cpp  paddleMovement.cpp  pageTransition.cpp  switchLayer.cpp  watch.cpp
BreakInAndOut/src/UI/: editPanel.cpp  levelPanel.cpp  mainMenu.cpp  selectCustomLevel.cpp
BreakInAndOut/src/utils/: Editor.cpp  Level.cpp  collisionDetection.cpp  math.cpp
enc_temp_folder/6df444f7d71e9386dbdd34e31e28c7d1/: Scene.cpp
